// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly link of type API call 1`] = `
<a
  className="govuk-link"
  href="/#"
/>
`;

exports[`renders correctly link of type button 1`] = `
<a
  className="govuk-button govuk-button--start"
  data-module="govuk-button"
  draggable="false"
  href={null}
  role="button"
/>
`;

exports[`renders correctly without specified type 1`] = `
<a
  className="govuk-link"
  href={null}
/>
`;
